build/log/idf_py_stdout_output_86017
[1/12] Performing build step for 'bootloader'
[1/1] cd /Users/joshmillar/Desktop/phd/PowerFeather/supply_and_battery_info/build/bootloader/esp-idf/esptool_py && /Users/joshmillar/.espressif/python_env/idf5.4_py3.12_env/bin/python /Users/joshmillar/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/joshmillar/Desktop/phd/PowerFeather/supply_and_battery_info/build/bootloader/bootloader.bin
Bootloader binary size 0x5270 bytes. 0x2d90 bytes (36%) free.
[2/12] No install step for 'bootloader'
[3/12] Building CXX object esp-idf/powerfeather__powerfeather-sdk/CMakeFiles/__idf_powerfeather__powerfeather-sdk.dir/src/Utils/MasterI2C.cpp.obj
FAILED: esp-idf/powerfeather__powerfeather-sdk/CMakeFiles/__idf_powerfeather__powerfeather-sdk.dir/src/Utils/MasterI2C.cpp.obj 
/Users/joshmillar/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32s3-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.4-dev-826-g8760e6d2a7\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/joshmillar/Desktop/phd/PowerFeather/supply_and_battery_info/build/config -I/Users/joshmillar/Desktop/phd/PowerFeather/supply_and_battery_info/managed_components/powerfeather__powerfeather-sdk/src -I/Users/joshmillar/esp/esp-idf/components/newlib/platform_include -I/Users/joshmillar/esp/esp-idf/components/freertos/config/include -I/Users/joshmillar/esp/esp-idf/components/freertos/config/include/freertos -I/Users/joshmillar/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/joshmillar/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/joshmillar/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/joshmillar/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/joshmillar/esp/esp-idf/components/freertos/esp_additions/include -I/Users/joshmillar/esp/esp-idf/components/esp_hw_support/include -I/Users/joshmillar/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/joshmillar/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/joshmillar/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/joshmillar/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/joshmillar/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/joshmillar/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/Users/joshmillar/esp/esp-idf/components/heap/include -I/Users/joshmillar/esp/esp-idf/components/log/include -I/Users/joshmillar/esp/esp-idf/components/soc/include -I/Users/joshmillar/esp/esp-idf/components/soc/esp32s3 -I/Users/joshmillar/esp/esp-idf/components/soc/esp32s3/include -I/Users/joshmillar/esp/esp-idf/components/hal/platform_port/include -I/Users/joshmillar/esp/esp-idf/components/hal/esp32s3/include -I/Users/joshmillar/esp/esp-idf/components/hal/include -I/Users/joshmillar/esp/esp-idf/components/esp_rom/include -I/Users/joshmillar/esp/esp-idf/components/esp_rom/include/esp32s3 -I/Users/joshmillar/esp/esp-idf/components/esp_rom/esp32s3 -I/Users/joshmillar/esp/esp-idf/components/esp_common/include -I/Users/joshmillar/esp/esp-idf/components/esp_system/include -I/Users/joshmillar/esp/esp-idf/components/esp_system/port/soc -I/Users/joshmillar/esp/esp-idf/components/esp_system/port/include/private -I/Users/joshmillar/esp/esp-idf/components/xtensa/esp32s3/include -I/Users/joshmillar/esp/esp-idf/components/xtensa/include -I/Users/joshmillar/esp/esp-idf/components/xtensa/deprecated_include -I/Users/joshmillar/esp/esp-idf/components/lwip/include -I/Users/joshmillar/esp/esp-idf/components/lwip/include/apps -I/Users/joshmillar/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/joshmillar/esp/esp-idf/components/lwip/lwip/src/include -I/Users/joshmillar/esp/esp-idf/components/lwip/port/include -I/Users/joshmillar/esp/esp-idf/components/lwip/port/freertos/include -I/Users/joshmillar/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/joshmillar/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/joshmillar/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/joshmillar/esp/esp-idf/components/driver/deprecated -I/Users/joshmillar/esp/esp-idf/components/driver/i2c/include -I/Users/joshmillar/esp/esp-idf/components/driver/touch_sensor/include -I/Users/joshmillar/esp/esp-idf/components/driver/twai/include -I/Users/joshmillar/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/Users/joshmillar/esp/esp-idf/components/esp_pm/include -I/Users/joshmillar/esp/esp-idf/components/esp_ringbuf/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_gpio/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_pcnt/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_gptimer/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_spi/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_mcpwm/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_i2s/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_sdmmc/include -I/Users/joshmillar/esp/esp-idf/components/sdmmc/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_sdspi/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_sdio/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_dac/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_rmt/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_tsens/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_sdm/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_i2c/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_uart/include -I/Users/joshmillar/esp/esp-idf/components/vfs/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_ledc/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_parlio/include -I/Users/joshmillar/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/Users/joshmillar/esp/esp-idf/components/esp_timer/include -I/Users/joshmillar/esp/esp-idf/components/spi_flash/include -I/Users/joshmillar/esp/esp-idf/components/nvs_flash/include -I/Users/joshmillar/esp/esp-idf/components/esp_partition/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/joshmillar/Desktop/phd/PowerFeather/supply_and_battery_info=. -fmacro-prefix-map=/Users/joshmillar/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -MD -MT esp-idf/powerfeather__powerfeather-sdk/CMakeFiles/__idf_powerfeather__powerfeather-sdk.dir/src/Utils/MasterI2C.cpp.obj -MF esp-idf/powerfeather__powerfeather-sdk/CMakeFiles/__idf_powerfeather__powerfeather-sdk.dir/src/Utils/MasterI2C.cpp.obj.d -o esp-idf/powerfeather__powerfeather-sdk/CMakeFiles/__idf_powerfeather__powerfeather-sdk.dir/src/Utils/MasterI2C.cpp.obj -c /Users/joshmillar/Desktop/phd/PowerFeather/supply_and_battery_info/managed_components/powerfeather__powerfeather-sdk/src/Utils/MasterI2C.cpp
/Users/joshmillar/Desktop/phd/PowerFeather/supply_and_battery_info/managed_components/powerfeather__powerfeather-sdk/src/Utils/MasterI2C.cpp: In member function 'virtual bool PowerFeather::MasterI2C::start()':
/Users/joshmillar/Desktop/phd/PowerFeather/supply_and_battery_info/managed_components/powerfeather__powerfeather-sdk/src/Utils/MasterI2C.cpp:56:5: error: no return statement in function returning non-void [-Werror=return-type]
   56 |     }
      |     ^
cc1plus: some warnings being treated as errors
[4/12] Completed 'bootloader'
[5/12] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/supply_and_battery_info.cpp.obj
ninja: build stopped: subcommand failed.
